# jax-trainer

./: .gitignore  LICENSE  README.md  pyproject.toml
tax/: config.py
tax/evals/: base.py  class_eval.py  lang_eval.py  losses.py
tax/examples/: utils.py
tax/examples/configs/: imdb.yaml  lm.yaml
tax/examples/gemma/: exp.py  gemma.py  lm_dp.py  task.py
tax/examples/lra/: attention.py  exp.py  experiment.py  lra_dp.py  lra_enc.py  lra_tok.py
tax/examples/lra/model/: attention.py  lra_enc.py  task.py
tax/train/: dfsp_jax.py  jax_single_host.py  utils.py
tests/trainer/: test_jax_single_host.py
trainer/: config.py  dfsp_jax.py  jax_single_host.py  lr_schedules.py
trainer/evals/: base.py
